tests/baselines/reference/annotationApplicationError11.errors.txt
tests/cases/conformance/annotations/annotationApplicationError11.ets(8,5): error TS28021: Annotation have to be applied only for non-abstract class declarations and method declarations in non-abstract classes, got: '@Anno
    abstract foo();'.


==== tests/cases/conformance/annotations/annotationApplicationError11.ets (1 errors) ====
    @interface Anno {
        a: number = 10
        b: string[] = []
    }
    
    
    abstract class C {
        @Anno
        ~~~~~
!!! error TS28021: Annotation have to be applied only for non-abstract class declarations and method declarations in non-abstract classes, got: '@Anno
!!! error TS28021:     abstract foo();'.
        abstract foo();
    }
    